[package]
name = "rust_rawmain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]

[dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_UI_Shell",
    "Win32_System_Environment",
    "Win32_System_Threading"
]